--- a/Genera Captcha.ipynb
+++ b/Genera Captcha.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,14 @@
     "# font = ImageFont.truetype(\"Arial-Bold.ttf\",14)\n",
     "font = ImageFont.truetype(\"arial.ttf\", 100)\n",
     "\n",
-    "N_SAMPLES = 5000 #numero captcha completi\n",
+    "N_SAMPLES = 10000 #numero captcha completi\n",
     "N_SMP_LETTERE_DEFORMATE =  26000\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing <PIL.Image.Image image mode=1 size=200x200 at 0xED00FD0>: 100%|█| 26000/26000 [06:18<00:00, 68.78 Samples/s] \n"
+      "Processing <PIL.Image.Image image mode=1 size=200x200 at 0xEEB8048>: 100%|█| 26000/26000 [03:45<00:00, 115.16 Samples/s]\n"
      ]
     }
    ],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,8 +201,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# generazione di captcha random"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,15 +219,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# generazione di captcha random"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
     "\n",
     "max_height = 200\n",
     "\n",
-    "for v in range (0,10):\n",
+    "for v in range (0,N_SAMPLES):\n",
     "    num_images = random.randint(MIN_IMAGES,MAX_IMAGES)\n",
     "    total_width = num_images*200\n",
     "    \n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,31 +301,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A\n",
-      "Y\n",
-      "T\n",
-      "H\n",
+      "U\n",
       "N\n",
-      "G\n",
-      "G\n",
-      "D\n",
-      "N\n",
-      "F\n"
+      "I\n",
+      "C\n",
+      "T\n"
      ]
     }
    ],
    "source": [
-    "parola = list(\"AYTHNGGDNF\")\n",
+    "parola = list(\"UNICT\")\n",
     "\n",
     "save_path = \"./CaptchaTest/\"\n",
     "\n",
+    "path = \"./matrici/originale/output/\" \n",
+    "dirs = os.listdir( path )\n",
     "MAX_IMAGES=7\n",
     "MIN_IMAGES=5\n",
     "num_images = len(parola)\n",
@@ -363,12 +360,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "#sporca(\"./CaptchaTest/\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
