polishing genera captcha
e rename

--- a/Captcha creator and sorter.ipynb
+++ b/Captcha creator and sorter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,11 +17,12 @@
     "from PIL import ImageFont\n",
     "from PIL import Image\n",
     "from PIL import ImageDraw\n",
+    "\n",
     "import random,string\n",
     "import os, sys, time\n",
     "\n",
     "# font = ImageFont.truetype(\"Arial-Bold.ttf\",14)\n",
-    "font = ImageFont.truetype(\"arial.ttf\", 100)\n",
+    "font = ImageFont.truetype(\"arial.ttf\", 100) #100 è la size\n",
     "\n",
     "N_SAMPLES = 10000 #numero captcha completi\n",
     "N_SMP_LETTERE_DEFORMATE =  26000\n",
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,21 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'string' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-7573ca637c94>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#creazione matrici\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0malfabeto\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mascii_uppercase\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#or list(map(chr, range(ord('a'), ord('z')+1)))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#alfabeto = [\"A\",\"B\",\"C\",\"D\",\"E\"]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[1;32min\u001b[0m \u001b[0malfabeto\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'string' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#creazione matrici\n",
     "alfabeto = list(string.ascii_uppercase) #or list(map(chr, range(ord('a'), ord('z')+1)))\n",
@@ -124,26 +113,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#immagine di esempio\n",
+    "Image.open(os.path.join(\"./matrici/originale\",\"A.png\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Augmentor"
+    "# Augmentor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialised with 26 image(s) found.\n",
-      "Output directory set to ./matrici/originale/output."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import Augmentor\n",
     "p = Augmentor.Pipeline(\"./matrici/originale/\")"
@@ -151,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,77 +154,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing <PIL.Image.Image image mode=1 size=200x200 at 0xEEB8048>: 100%|█| 26000/26000 [03:45<00:00, 115.16 Samples/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "print(N_SMP_LETTERE_DEFORMATE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "p.sample(N_SMP_LETTERE_DEFORMATE)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sporcaFolder(path):\n",
-    "    dirs = os.listdir( path )\n",
-    "    for item in dirs:\n",
-    "        if os.path.isfile(path+item):\n",
-    "            im = Image.open(path+item)\n",
-    "            f, e = os.path.splitext(path+item)\n",
-    "            im = noisy(im,width=1000,height=200)\n",
-    "            im.save(f\"{f}.png\")"
+    "#immagine di esempio deformata\n",
+    "Image.open(os.path.join(\"./matrici/originale/output\",\"originale_original_A.png_0074a92e-09fd-4850-8249-bca7d04fc62d.png\")) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# generazione di captcha random"
+    "# Generazione di captcha random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import string\n",
     "def getfirstUppercase(s):\n",
     "    return ([char for char in s if char.isupper()])[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = \"./matrici/originale/output/\" #sono le matrici distorte, 200x200\n",
-    "dirs = os.listdir( path )\n",
+    "dirs = os.listdir( path ) #converte il contenuto della directory in una lista\n",
     "\n",
+    "#intervallo random lunghezza captcha\n",
     "MAX_IMAGES=7\n",
     "MIN_IMAGES=5\n",
     "\n",
+    "#altezza\n",
     "max_height = 200\n",
     "\n",
+    "#generazione\n",
     "for v in range (0,N_SAMPLES):\n",
-    "    num_images = random.randint(MIN_IMAGES,MAX_IMAGES)\n",
-    "    total_width = num_images*200\n",
+    "    num_images = random.randint(MIN_IMAGES,MAX_IMAGES) #lunghezza captcha in lettere\n",
+    "    total_width = num_images*200 #lunghezza immagine in px\n",
     "    \n",
     "    new_im = Image.new(\"1\", (total_width, max_height))\n",
     "    filename = \"\"\n",
@@ -243,8 +225,8 @@
     "    for i in range (0,num_images): #num_images elementi\n",
     "        curr_rand=random.randint(0,len(dirs)-1)\n",
     "        list_images.append(os.path.join(path,dirs[curr_rand]))\n",
-    "        valore = dirs[curr_rand]\n",
-    "        filename+=getfirstUppercase(valore)\n",
+    "        valore = dirs[curr_rand] #nome file random\n",
+    "        filename+=getfirstUppercase(valore) #si aggiunge al filename la lettera corripondente\n",
     "\n",
     "    for im in list_images:\n",
     "        image_cur = Image.open(im)\n",
@@ -258,29 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#aggiunge il noise ai captcha\n",
-    "#sporcaFolder(\"./captcha/completi/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Croppa tutti i captcha e smista le lettere nelle cartelle\n",
     "path = \"./captcha/completi/\"\n",
     "dirs = os.listdir( path )\n",
     "\n",
     "for item in dirs:\n",
-    "\n",
     "    if os.path.isfile(path+item):\n",
-    "        for i in range(0,5):\n",
+    "        lenght_img = int(Image.open(path+item).size[0] / 200)\n",
+    "        for i in range(0,lenght_img):\n",
     "            im = Image.open(path+item)\n",
-    "            #crop ogni 200px 5 volte\n",
+    "            #crop ogni 200px lenght_img volte\n",
     "            #0,0 200,200 - 200,0 400,200 - 400,0 600, 200\n",
     "            current_box = im.crop((200*i,0,200*(i+1),200))\n",
     "\n",
@@ -296,26 +269,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generazione di captcha custom"
+    "# Organizzazione files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il numero di campioni nelle varie cartelle viene uniformato con il numero di campioni del meno frequente"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "U\n",
-      "N\n",
-      "I\n",
-      "C\n",
-      "T\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import os, os.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"./captcha/singoli/\"\n",
+    "dirs = os.listdir( path )\n",
+    "smp_num = []\n",
+    "\n",
+    "#List number of elements per folder\n",
+    "for item in dirs:\n",
+    "    folder = ([(f) for f in os.listdir(path+item) if os.path.isfile(os.path.join(path,item,f))])\n",
+    "    old_lenght = len(folder)\n",
+    "    smp_num.append((len([f for f in os.listdir(path+item) if os.path.isfile(os.path.join(path,item,f))])))\n",
+    "    print(item, old_lenght)\n",
+    "\n",
+    "minimum = min(smp_num)\n",
+    "print(\"The minimum is\",minimum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smp_num=[]\n",
+    "\n",
+    "#Cancella il numero di elementi in eccesso per cartella\n",
+    "for item in dirs:\n",
+    "    folder = ([(f) for f in os.listdir(path+item) if os.path.isfile(os.path.join(path,item,f))])\n",
+    "    old_lenght = len(folder)\n",
+    "    \n",
+    "    smp_num.append((len([f for f in os.listdir(path+item) if os.path.isfile(os.path.join(path,item,f))])))\n",
+    "    \n",
+    "    #per ogni folder, rimuovi len(folder) - minimum elementi\n",
+    "    times = (len(folder)-minimum)\n",
+    "    for i in range(0,times):\n",
+    "        os.remove(os.path.join(path, item ,folder[i]))\n",
+    "        folder.pop(i)\n",
+    "    \n",
+    "    new_lenght = len(folder)\n",
+    "    print(item,old_lenght, \"->\", new_lenght)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Split library\n",
+    "import split_folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_folder = path\n",
+    "# Split with a ratio.\n",
+    "# To only split into training and validation set, set a tuple to `ratio`, i.e, `(.8, .2)`.\n",
+    "split_folders.ratio(input_folder, output=\"output\", ratio=(.6, .2, .2)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generazione di captcha custom (opzionale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "parola = list(\"UNICT\")\n",
     "\n",
@@ -323,8 +376,7 @@
     "\n",
     "path = \"./matrici/originale/output/\" \n",
     "dirs = os.listdir( path )\n",
-    "MAX_IMAGES=7\n",
-    "MIN_IMAGES=5\n",
+    "\n",
     "num_images = len(parola)\n",
     "\n",
     "max_height = 200\n",
@@ -360,12 +412,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#sporca(\"./CaptchaTest/\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
